--- a/src/components/lettering/lettering.css
+++ b/src/components/lettering/lettering.css
@@ -1,6 +1,6 @@
 .lettering {
   color: #fff;
-  font-family: monospace;
+  font-family: Montserrat, tahoma, verdana, sans-serif;
   text-align: center;
   position: relative;
 }
